# ephemos

./: .actrc  .bazelrc  .gitallowed  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .nancy-ignore  .secrets  API_TERMS.md  BUILD.bazel  CI_VERIFICATION_TESTS.md  CLAUDE.md  COBRA_OPTIMIZATION_RECOMMENDATIONS.md  CODE_REDUCTION_PLAN.md  Dockerfile  Dockerfile.multistage  FAQ.md  FUTURE_ABSTRACTION_IMPROVEMENTS.md  HEXAGONAL_ASSESSMENT.md  IDENTITY_TIMING_FIXES.md  LICENSE  Makefile  Makefile.ci  Makefile.core  Makefile.security  PENDING_COBRA_OPTIMIZATIONS.md  PORT_ABSTRACTION_ANALYSIS.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  README_BAZEL.md  SECURITY.md  SVID_ROTATION_ASSESSMENT.md  THREAT_MODEL.md  WORKSPACE  bazel.sh  cli-refactor.md  coverage.html  current-deps.txt  (+17 more)
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  renovate.json5
.github/actions/: README.md
.github/codeql/: codeql-config.yml
.github/scripts/: build-diagnostics.sh  ci-diagnostics.sh  security-diagnostics.sh  test-diagnostics.sh
.github/workflows/: README.md  bazel-ci.yml  ci-disabled.yml  ci-original.yml  ci.yml  codeql.yml  docs-and-release.yml  fuzzing.yml  markdown-link-check-config.json  performance.yml  renovate.yml  sast-scan.yml  scorecard.yml  secrets-scan.yml  security.yml  yaml-validation.yml
api/proto/: echo.proto
archive/: README.md
archive/examples/: ARCHITECTURE.md  CLEAN-EXAMPLES.md  README-PROTOBUF-FREE.md  README-TIMEZONE.md  SIMPLE-HTTP.md
archive/examples/config-patterns/: BUILD.bazel  main.go
archive/examples/config-validation/: BUILD.bazel  go.mod  go.sum  main.go
archive/examples/interceptors/: BUILD.bazel  main.go
archive/examples/proto-backup/: BUILD.bazel
archive/examples/transport-agnostic/: BUILD.bazel  README.md  main.go
cmd/config-validator/: BUILD.bazel  main.go  main_test.go  printer.go  result.go  tips.go
cmd/ephemos-cli/: BUILD.bazel  ci_verification_test.go  main.go  main_test.go
cmd/test-errorx/: main.go
config/: README.md  echo-client.yaml  echo-server.yaml  ephemos.yaml  transport-grpc.yaml  transport-http.yaml
config/templates/: production.yaml.template  staging.yaml.template
contrib/: README.md
docs/: CONTRIBUTING.md  DEVELOPMENT.md  ENHANCED_GRPC_CONNECTION_MANAGEMENT.md  FAQ.md  HTTP_CLIENT.md  INTERCEPTORS.md  MIGRATION_FROM_REGISTER.md  README.md  SECURITY-LOGGING.md  SECURITY_FEATURES.md  SECURITY_RUNBOOK.md  SECURITY_UPDATE_2024.md  configuration-patterns.md  protoc.md  register-ephimos.md
examples/: DEPLOYMENT.md  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md
examples/echo-client/: BUILD.bazel  main.go
examples/echo-server/: BUILD.bazel  main.go
internal/adapters/grpc/: BUILD.bazel  adapter.go
internal/adapters/interceptors/: BUILD.bazel  auth.go  auth_test.go  direct_test.go  example_test.go  identity_propagation.go  identity_propagation_test.go  integration_test.go  logging.go  logging_test.go  metrics.go  metrics_test.go  stream_test.go  testing.go
internal/adapters/logging/: BUILD.bazel  redactor.go  redactor_test.go  secure_logger.go
internal/adapters/metrics/: BUILD.bazel  prometheus_metrics.go
internal/arch/: BUILD.bazel  README.md  dep_boundary_test.go  import_graph_test.go  interface_segregation_test.go  no_http_in_core_test.go  runtime_validation.go  runtime_validation_test.go  runtime_validator_prod.go  runtime_validator_test.go  selector_depth_test.go  validator_internal_test.go
internal/buildinfo/: BUILD.bazel  buildinfo.go  buildinfo_test.go
internal/cli/: BUILD.bazel  completion.go  diagnose.go  errors.go  health.go  inspect.go  redaction.go  register.go  register_test.go  root.go  root_test.go  verify.go  version.go
internal/factory/: BUILD.bazel  spiffe.go  spiffe_test.go
internal/integration/: BUILD.bazel  README.md  ci_verification_test.go  identity_simplified_test.go  mtls_invariants_test.go
pkg/ephemos/: BUILD.bazel  adapters.go  api_test.go  authorizer.go  ci_verification_test.go  config.go  config_enhanced.go  config_enhanced_test.go  config_fuzz_test.go  conformance_test.go  enhanced_server.go  ephemos.go  ephemos_integration_test.go  ephemos_public_test.go  ephemos_test.go  ephemos_testhook.go  errors.go  errors_enhanced.go  errors_enhanced_test.go  factory.go  graceful_shutdown.go  graceful_shutdown_test.go  http.go  http_client_test.go  identity.go  identity_fuzz_test.go  identity_server.go  interceptors.go  interfaces.go  internal_imports_test.go  options.go  public_api.go  server.go  server_fuzz_test.go  server_wrapper_test.go  spiffe_provider.go  spiffe_validation.go  spiffe_validation_test.go  transport_adapters.go  types.go  (+3 more)
scripts/: BUILD.bazel  benchmark.sh  check-bazel-syntax.sh  check-deps.sh  check-shadowing.sh  ci-build-examples.sh  ci-setup.sh  debug-ci-build.sh  diagnose-protobuf.sh  ensure-protoc.sh  generate-proto-ci.sh  install-bazel.sh  install-deps-sudo.sh  install-deps.sh  install-protobuf-tools.sh  security-scan.sh  setup-dev-environment.sh  smoke-test-simple.sh  smoke-test.sh  test-summary.go  validate-bazel-config.sh  validate-bazel-syntax.sh  validate-port-abstractions.sh
scripts/ci/: BUILD.bazel  lint.sh  security-checks.sh
scripts/demo/: BUILD.bazel  cleanup-all-processes.sh  cleanup-spire-entries.sh  cleanup.sh  force-cleanup.sh  full-demo.sh  install-spire.sh  run-demo.sh  setup-demo.sh  start-spire.sh  stop-spire.sh  test-demo-setup.sh  test-identity-timing.sh  test-spire-lifecycle.sh
scripts/proto/: BUILD.bazel  README.md  main.go  run-proto-generator.sh
scripts/security/: BUILD.bazel  generate-sbom.sh  install-tools.sh  run-security-scanner.sh  scan-secrets.sh  scan-vulnerabilities.sh  security-scan-all.sh  test-sbom.sh  validate-sbom.sh
scripts/security/go/: BUILD.bazel  README.md  main.go
scripts/test-summary/: BUILD.bazel  go.mod  main.go
scripts/utils/: BUILD.bazel  cleanup-all-entries.sh  test-server.sh
scripts/validate-yaml/: BUILD.bazel  go.mod  main.go
tools/: BUILD.bazel  lint_check.sh  security_scan.sh  workspace_status.sh
tools/toolchains/: BUILD.bazel  README.md
(+299 files in other folders)
