load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/sufield/ephemos
# gazelle:exclude examples/proto/*.pb.go
# gazelle:exclude **/*_test.go

gazelle(name = "gazelle")

# Update dependencies
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
    ],
    command = "update-repos",
)

# Root filegroup for all source files
filegroup(
    name = "all-srcs",
    srcs = glob([
        "**/*.go",
        "**/*.proto",
        "**/*.yaml",
        "**/*.yml",
        "**/*.json",
        "**/*.md",
        "Makefile*",
        "go.mod",
        "go.sum",
    ]),
    visibility = ["//visibility:public"],
)