load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "config-validator_lib",
    srcs = [
        "main.go",
        "printer.go", 
        "result.go",
        "tips.go",
    ],
    importpath = "github.com/sufield/ephemos/cmd/config-validator",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/adapters/secondary/config",
        "//internal/core/errors",
        "//internal/core/ports",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "config-validator",
    embed = [":config-validator_lib"],
    visibility = ["//visibility:public"],
    stamp = 1,
    gc_linkopts = ["-s", "-w"],
    x_defs = {
        "main.version": "{STABLE_VERSION}",
        "main.commit": "{STABLE_COMMIT}",
        "main.buildDate": "{STABLE_BUILD_DATE}",
    },
)

go_test(
    name = "config-validator_test",
    srcs = ["main_test.go"],
    embed = [":config-validator_lib"],
    deps = [
        "//internal/core/errors",
        "//internal/core/ports",
    ],
)
