load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ephemos-cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/sufield/ephemos/cmd/ephemos-cli",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ephemos",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "ephemos-cli",
    embed = [":ephemos-cli_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.Version": "{STABLE_VERSION}",
        "main.CommitHash": "{STABLE_COMMIT_HASH}",
        "main.BuildTime": "{STABLE_BUILD_TIME}",
        "main.BuildUser": "{STABLE_BUILD_USER}",
        "main.BuildHost": "{STABLE_BUILD_HOST}",
    },
)