load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "ephemos-cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/sufield/ephemos/cmd/ephemos-cli",
    visibility = ["//visibility:private"],
    deps = ["//internal/cli"],
)

go_binary(
    name = "ephemos-cli",
    embed = [":ephemos-cli_lib"],
    visibility = ["//visibility:public"],
    stamp = 1,
    gc_linkopts = ["-s", "-w"],
    x_defs = {
        "main.version": "{STABLE_VERSION}",
        "main.commit": "{STABLE_COMMIT}",
        "main.buildDate": "{STABLE_BUILD_DATE}",
        "main.buildUser": "{STABLE_BUILD_USER}",
        "main.buildHost": "{STABLE_BUILD_HOST}",
    },
)

go_test(
    name = "ephemos-cli_test",
    srcs = ["main_test.go"],
    embed = [":ephemos-cli_lib"],
    deps = ["//internal/cli"],
)
