load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "ephemos-cli",
    srcs = ["main.go"],  # package main
    embed = ["//internal/cli"],  # embed real library
    visibility = ["//visibility:public"],
    stamp = 1,  # REQUIRED for {STABLE_*} to populate
    x_defs = {
        "github.com/sufield/ephemos/internal/buildinfo.Version": "{STABLE_VERSION}",
        "github.com/sufield/ephemos/internal/buildinfo.CommitHash": "{STABLE_COMMIT}",
        "github.com/sufield/ephemos/internal/buildinfo.BuildTime": "{STABLE_BUILD_DATE}",
        "github.com/sufield/ephemos/internal/buildinfo.BuildUser": "{STABLE_BUILD_USER}",
        "github.com/sufield/ephemos/internal/buildinfo.BuildHost": "{STABLE_BUILD_HOST}",
    },
    # Strip symbols for smaller release binaries
    gc_linkopts = ["-s", "-w"],
)

go_test(
    name = "ephemos-cli_test",
    srcs = ["main_test.go"],
    deps = [
        "//internal/buildinfo",
        "//internal/cli",
    ],
)
