load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "buildinfo",
    srcs = ["buildinfo.go"],
    importpath = "github.com/sufield/ephemos/internal/buildinfo",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "buildinfo_test",
    srcs = ["buildinfo_test.go"],
    embed = [":buildinfo"],
)