load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cli",
    srcs = [
        "completion.go",
        "errors.go",
        "redaction.go",
        "root.go",
    ],
    importpath = "github.com/sufield/ephemos/internal/cli",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/buildinfo",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "cli_test",
    srcs = [
        "root_test.go",
    ],
    deps = [
        ":cli",
        "@com_github_spf13_cobra//:cobra",
    ],
)
