load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ephemos",
    srcs = [
        "config.go",
        "config_enhanced.go",
        "ephemos.go",
        "graceful_shutdown.go",
        "identity_server.go",
        "server.go",
        "types.go",
        "validation.go",
    ],
    importpath = "github.com/sufield/ephemos/pkg/ephemos",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/adapters/grpc",
        "//internal/adapters/http",
        "//internal/adapters/interceptors",
        "//internal/adapters/primary/api",
        "//internal/adapters/secondary/config",
        "//internal/adapters/secondary/spiffe",
        "//internal/core/errors",
        "//internal/core/ports",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_test(
    name = "ephemos_test",
    srcs = [
        "config_enhanced_test.go",
        "config_fuzz_test.go",
        "ephemos_test.go",
        "graceful_shutdown_test.go",
        "identity_fuzz_test.go",
        "internal_imports_test.go",
        "server_fuzz_test.go",
        "validation_test.go",
    ],
    embed = [":ephemos"],
    deps = [
        "//internal/adapters/secondary/spiffe",
        "//internal/core/errors",
        "//internal/core/ports",
        "@org_golang_google_grpc//:grpc",
    ],
)
