load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ephemos",
    srcs = [
        "config.go",
        "config_enhanced.go",
        "graceful_shutdown.go",
        "identity_server.go",
        "types.go",
        "validation.go",
    ],
    importpath = "github.com/sufield/ephemos/pkg/ephemos",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spiffe_go_spiffe_v2//spiffeid",
        "@com_github_spiffe_go_spiffe_v2//spiffetls/tlsconfig",
        "@com_github_spiffe_go_spiffe_v2//workloadapi",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "ephemos_test",
    srcs = [
        "config_enhanced_test.go",
        "identity_fuzz_test.go",
        "internal_imports_test.go",
        "validation_test.go",
    ],
    embed = [":ephemos"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)