load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ephemos",
    srcs = [
        "errors.go",
        "options.go", 
        "public_api.go",
    ],
    importpath = "github.com/sufield/ephemos/pkg/ephemos",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/adapters/secondary/config",
        "//internal/core/ports",
        "//internal/factory",
    ],
)

go_test(
    name = "ephemos_test",
    srcs = [
        "api_test.go",
        "conformance_test.go",
        "http_client_test.go",
        "internal_imports_test.go",
    ],
    embed = [":ephemos"],
    deps = [
        "//internal/core/ports",
    ],
)
