# CI scripts converted to Bazel targets

sh_binary(
    name = "lint",
    srcs = ["lint.sh"],
    tags = [
        "ci",
        "lint",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "security_checks",
    srcs = ["security-checks.sh"],
    data = [
        "//scripts/security:scan_secrets",
        "//scripts/security:scan_vulnerabilities",
    ],
    tags = [
        "ci",
        "security",
    ],
    visibility = ["//visibility:public"],
)

# CI test targets
sh_test(
    name = "lint_test",
    size = "small",
    srcs = ["lint.sh"],
    tags = ["ci"],
)

sh_test(
    name = "security_checks_test",
    size = "medium",
    srcs = ["security-checks.sh"],
    data = [
        "//scripts/security:scan_secrets",
        "//scripts/security:scan_vulnerabilities",
    ],
    tags = [
        "ci",
        "security",
    ],
)

# CI test suite
test_suite(
    name = "ci_tests",
    tags = ["ci"],
    tests = [
        ":lint_test",
        ":security_checks_test",
    ],
)
