load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "proto_generator_lib",
    srcs = ["main.go"],
    importpath = "github.com/sufield/ephemos/scripts/proto",
    visibility = ["//visibility:private"],
    deps = ["@com_github_spf13_cobra//:cobra"],
)

go_binary(
    name = "proto_generator",
    embed = [":proto_generator_lib"],
    visibility = ["//visibility:public"],
)
