load("@io_bazel_rules_go//go:def.bzl", "go_binary")

# Security scripts converted to Bazel targets

sh_binary(
    name = "scan_secrets",
    srcs = ["scan-secrets.sh"],
    visibility = ["//visibility:public"],
    tags = ["security"],
)

sh_binary(
    name = "scan_vulnerabilities", 
    srcs = ["scan-vulnerabilities.sh"],
    visibility = ["//visibility:public"],
    tags = ["security"],
)

sh_binary(
    name = "generate_sbom",
    srcs = ["generate-sbom.sh"],
    visibility = ["//visibility:public"],
    tags = ["security", "sbom"],
)

sh_binary(
    name = "validate_sbom",
    srcs = ["validate-sbom.sh"],
    visibility = ["//visibility:public"],
    tags = ["security", "sbom"],
)

sh_binary(
    name = "install_tools",
    srcs = ["install-tools.sh"],
    visibility = ["//visibility:public"],
    tags = ["security", "setup"],
)

# Combined security scan that runs multiple checks
sh_binary(
    name = "security_scan_all",
    srcs = ["security-scan-all.sh"],
    visibility = ["//visibility:public"],
    tags = ["security"],
    data = [
        ":scan_secrets",
        ":scan_vulnerabilities",
        ":validate_sbom",
    ],
)

# Test targets for security scripts
sh_test(
    name = "scan_secrets_test",
    srcs = ["scan-secrets.sh"],
    tags = ["security", "secrets"],
    size = "medium",
)

sh_test(
    name = "scan_vulnerabilities_test",
    srcs = ["scan-vulnerabilities.sh"], 
    tags = ["security", "vulns"],
    size = "medium",
)

sh_test(
    name = "sbom_generation_test",
    srcs = ["test-sbom.sh"],
    tags = ["security", "sbom"],
    size = "small",
    data = [
        ":generate_sbom",
        ":validate_sbom",
    ],
)

# Security test suite
test_suite(
    name = "security_tests",
    tests = [
        ":scan_secrets_test",
        ":scan_vulnerabilities_test", 
        ":sbom_generation_test",
    ],
    tags = ["security"],
)

# Future Go-based security tools
go_binary(
    name = "security_scanner",
    srcs = ["//scripts/security/go:main.go"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_cobra//:cobra",
    ],
) if False else None  # TODO: Implement Go-based security scanner