load("@io_bazel_rules_go//go:def.bzl", "go_binary")

# Security scripts converted to Bazel targets

sh_binary(
    name = "scan_secrets",
    srcs = ["scan-secrets.sh"],
    tags = ["security"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "scan_vulnerabilities",
    srcs = ["scan-vulnerabilities.sh"],
    tags = ["security"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "generate_sbom",
    srcs = ["generate-sbom.sh"],
    tags = [
        "sbom",
        "security",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "validate_sbom",
    srcs = ["validate-sbom.sh"],
    tags = [
        "sbom",
        "security",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "install_tools",
    srcs = ["install-tools.sh"],
    tags = [
        "security",
        "setup",
    ],
    visibility = ["//visibility:public"],
)

# Combined security scan that runs multiple checks
sh_binary(
    name = "security_scan_all",
    srcs = ["security-scan-all.sh"],
    data = [
        ":scan_secrets",
        ":scan_vulnerabilities",
        ":validate_sbom",
    ],
    tags = ["security"],
    visibility = ["//visibility:public"],
)

# Test targets for security scripts
sh_test(
    name = "scan_secrets_test",
    size = "medium",
    srcs = ["scan-secrets.sh"],
    tags = [
        "secrets",
        "security",
    ],
)

sh_test(
    name = "scan_vulnerabilities_test",
    size = "medium",
    srcs = ["scan-vulnerabilities.sh"],
    tags = [
        "security",
        "vulns",
    ],
)

sh_test(
    name = "sbom_generation_test",
    size = "small",
    srcs = ["test-sbom.sh"],
    data = [
        ":generate_sbom",
        ":validate_sbom",
    ],
    tags = [
        "sbom",
        "security",
    ],
)

# Security test suite
test_suite(
    name = "security_tests",
    tags = ["security"],
    tests = [
        ":sbom_generation_test",
        ":scan_secrets_test",
        ":scan_vulnerabilities_test",
    ],
)

# TODO: Future Go-based security scanner could be added here
# go_binary(
#     name = "security_scanner", 
#     srcs = ["go/main.go"],
#     visibility = ["//visibility:public"],
#     deps = ["@com_github_spf13_cobra//:cobra"],
# )
