load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test-summary_lib",
    srcs = ["main.go"],
    importpath = "github.com/sufield/ephemos/scripts/test-summary",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "test-summary",
    embed = [":test-summary_lib"],
    visibility = ["//visibility:public"],
)
