# Utility scripts converted to Bazel targets

sh_binary(
    name = "test_server",
    srcs = ["test-server.sh"],
    tags = [
        "test",
        "utils",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "test_registration",
    srcs = ["test-registration.sh"],
    tags = [
        "test",
        "utils",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "cleanup_all_entries",
    srcs = ["cleanup-all-entries.sh"],
    tags = [
        "cleanup",
        "utils",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "show_demo_messages",
    srcs = ["show-demo-messages.sh"],
    tags = [
        "demo",
        "utils",
    ],
    visibility = ["//visibility:public"],
)

# Utility test targets
sh_test(
    name = "server_test",
    size = "medium",
    srcs = ["test-server.sh"],
    tags = ["utils"],
)

sh_test(
    name = "registration_test",
    size = "small",
    srcs = ["test-registration.sh"],
    tags = ["utils"],
)

# Utility test suite
test_suite(
    name = "utils_tests",
    tags = ["utils"],
    tests = [
        ":registration_test",
        ":server_test",
    ],
)
